# SFML_Vaclav_Fencl

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  SFML_Vaclav_Fencl.sln  SFML_Vaclav_Fencl.vcxproj  SFML_Vaclav_Fencl.vcxproj.filters  run.bat  run.sh
src/: Entity.cpp  Entity.h  Game.cpp  Game.h
src/buttons/: BackButton.cpp  BackButton.h  Button.cpp  Button.h  ConnectButton.cpp  ConnectButton.h  ExitButton.cpp  ExitButton.h  FullscreenButton.cpp  FullscreenButton.h  HostButton.cpp  HostButton.h  MultiplayerButton.cpp  MultiplayerButton.h  PlayButton.cpp  PlayButton.h  ResumeButton.cpp  ResumeButton.h  SettingsButton.cpp  SettingsButton.h  VolumeButton.cpp  VolumeButton.h
src/core/: AnimationManager.cpp  AnimationManager.h  IGameState.h  Settings.cpp  Settings.h  SoundManager.cpp  SoundManager.h  StateHandler.cpp  StateHandler.h  TextureManager.cpp  TextureManager.h
src/entities/: Apple.cpp  Apple.h  Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  Snake.cpp  Snake.h
src/states/: GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  MpGameState.cpp  MpGameState.h  MultiplayerState.cpp  MultiplayerState.h  PauseState.cpp  PauseState.h  SettingsState.cpp  SettingsState.h
